Fix heatmap being cutoff on smaller windows.

--- a/yd_website/src/pages/Home/WorkoutHeatmap/WorkoutHeatmap.module.css
+++ b/yd_website/src/pages/Home/WorkoutHeatmap/WorkoutHeatmap.module.css
@@ -9,3 +9,8 @@
     padding: 0 1rem;
   }
 }
+
+.heatmap {
+  overflow: scroll;
+  height: 9rem;
+}
